--- a/index.html
+++ b/index.html
@@ -3,50 +3,86 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mage Escape</title>
+  <title>MageEscape</title>
   <link rel="stylesheet" href="style.css">
-  <script type="module" src="script.js" defer></script>
 </head>
 <body>
-  
-  <!-- Starting Page -->
-  <div id="start-page">
-    <img src="assets/start.png" alt="Welcome Mage" class="glow-image">
-    <h1>Welcome Mage</h1>
-    <button id="start-game-btn">Start Game</button>
+
+  <!-- 🔥 Start Page -->
+  <div id="start-page" class="page active">
+    <img src="assets/start.png" alt="Start Image" class="start-image">
+    <h1>Intent Games</h1>
+    <button id="start-btn">Start Game</button>
+    <footer>
+      <img src="assets/logo.png" alt="Logo" class="logo">
+    </footer>
   </div>
 
-  <!-- Username Input Page -->
-  <div id="username-page" style="display:none;">
-    <p>Enter your username:</p>
-    <input type="text" id="username-input" placeholder="Your username">
-    <button id="username-submit">Play</button>
+  <!-- 📝 Username Input Page -->
+  <div id="username-page" class="page">
+    <h2>Enter your username</h2>
+    <input type="text" id="username-input" placeholder="Your name">
+    <button id="play-btn">Play</button>
+    <footer>
+      <img src="assets/logo.png" alt="Logo" class="logo">
+    </footer>
   </div>
 
-  <!-- Game Page -->
-  <div id="game-page" style="display:none;">
-    <div id="level-select">
-      <button onclick="startLevel('easy')">Easy</button>
-      <button onclick="startLevel('medium')">Medium</button>
-      <button onclick="startLevel('hard')">Hard</button>
-    </div>
-
-    <div id="game-area"></div>
-    <p id="timer">Time: 0s</p>
+  <!-- 🎚 Level Selection Page -->
+  <div id="level-page" class="page">
+    <h2>Select Difficulty</h2>
+    <button class="level-btn" data-level="easy">Easy</button>
+    <button class="level-btn" data-level="medium">Medium</button>
+    <button class="level-btn" data-level="hard">Hard</button>
+    <footer>
+      <img src="assets/logo.png" alt="Logo" class="logo">
+    </footer>
   </div>
 
-  <!-- Leaderboard -->
-  <h2>Leaderboard</h2>
-  <ol id="leaderboard"></ol>
+  <!-- 🎮 Game Page -->
+  <div id="game-page" class="page">
+    <canvas id="game-canvas" width="600" height="600"></canvas>
+    <div id="timer">Time: 0.00s</div>
+  </div>
 
-  <!-- Footer / Branding -->
-  <footer id="game-footer">
-    <p>Built by @xiipher</p>
-    <div id="branding">
-      <img src="assets/logo.png" alt="Anoma Logo" class="anoma-logo">
-      <span class="branding-text">Intent Games</span>
-    </div>
-  </footer>
+  <!-- 🏆 Leaderboard Page -->
+  <div id="leaderboard-page" class="page">
+    <h2>Leaderboard</h2>
+    <ol id="leaderboard-list"></ol>
+    <button id="replay-btn">Replay</button>
+    <button id="exit-btn">Exit</button>
+    <footer>
+      <img src="assets/logo.png" alt="Logo" class="logo">
+    </footer>
+  </div>
 
+  <!-- 🔗 Firebase + Script -->
+  <script type="module">
+    // Firebase SDK imports
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/12.2.1/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.2.1/firebase-analytics.js";
+    import { getFirestore } from "https://www.gstatic.com/firebasejs/12.2.1/firebase-firestore.js";
+
+    // Your Firebase configuration
+    const firebaseConfig = {
+      apiKey: "AIzaSyCiKGqhSSCVQ3GPtnMA1DZSzemXLWoBM1M",
+      authDomain: "preepclicker.firebaseapp.com",
+      projectId: "preepclicker",
+      storageBucket: "preepclicker.firebasestorage.app",
+      messagingSenderId: "108481604",
+      appId: "1:108481604:web:d5064e43d4eb6abd68c011",
+      measurementId: "G-HV0WFYR4CB"
+    };
+
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
+    const db = getFirestore(app);
+
+    // Make db available for script.js
+    window.db = db;
+  </script>
+
+  <script src="script.js" type="module"></script>
 </body>
 </html>
