--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -29,7 +28,7 @@
 
   <!-- Game Page -->
   <div id="game-page" class="page">
-    <canvas id="game-canvas" width="600" height="600"></canvas>
+    <canvas id="game-canvas"></canvas>
 
     <div id="hud">
       <div id="timer">Time: 0.00s</div>
@@ -57,6 +56,7 @@
     <button id="back-btn" class="small-btn">Back to Menu</button>
   </div>
 
-  <script src="script.js"></script>
+  <!-- LINK TO YOUR JS FILE -->
+  <script src="game.js"></script>
 </body>
 </html>
