--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
     <button id="back-btn" class="small-btn">Back to Menu</button>
   </div>
 
-  <!-- LINK TO YOUR JS FILE -->
-  <script src="game.js"></script>
+  <!-- ✅ Load JS AFTER the DOM is ready -->
+  <script src="game.js" defer></script>
 </body>
 </html>
+
