--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -28,14 +29,14 @@
 
   <!-- Game Page -->
   <div id="game-page" class="page">
-    <canvas id="game-canvas"></canvas>
+    <canvas id="game-canvas" width="600" height="600"></canvas>
 
     <div id="hud">
       <div id="timer">Time: 0.00s</div>
       <div id="coords"></div>
     </div>
 
-    <!-- Mobile arrows -->
+    
     <div id="arrows">
       <button id="up-btn" class="arrow">▲</button>
       <div class="hrow">
@@ -56,8 +57,6 @@
     <button id="back-btn" class="small-btn">Back to Menu</button>
   </div>
 
-  <!-- ✅ Load JS AFTER the DOM is ready -->
-  <script src="game.js" defer></script>
+  <script src="script.js"></script>
 </body>
 </html>
-
